syntax="proto3";

package message_rpc;

option go_package="github.com/jsn4ke/chat/pkg/pb/message_rpc";

message ClientId {
    uint64 ssid = 1;
    uint32 gatewayId = 2;
}

message UserInfo {
    uint64 uid = 1;
    uint64 guild = 2;
    uint64 teamdId = 3;
    uint64 worldId = 4;
}